@@ -4,6 +4,10 @@
 \alias{\%*\%,Matrix,numeric-method}
 \alias{\%*\%,numeric,Matrix-method}
 % "[" are in ./Xtrct-methods.Rd
+\alias{cbind2,Matrix,Matrix-method}
+\alias{cbind2,Matrix,NULL-method}
+\alias{cbind2,Matrix,missing-method}
+\alias{cbind2,NULL,Matrix-method}
 \alias{crossprod,Matrix,numeric-method}
 \alias{crossprod,numeric,Matrix-method}
 \alias{solve,Matrix,numeric-method}
